# MiniRangeCoder

./: LICENSE  MiniRangeCoder.c  MiniRangeCoder.h  README.md
example/: example.c
test/: CMakeLists.txt  README.md  test.cpp  test.sh
